[package]
name = "plasma2350-rust-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

embedded-hal = "1.0.0"
rp235x-hal = { version = "0.2.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  "defmt",
] }
panic-halt = "1.0.0"
rp-binary-info = "0.1.0"

[dev-dependencies]
libm = "0.2.11"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
smart-leds = "0.3.0"
ws2812-pio = { git = "https://github.com/melastmohican/ws2812-pio-rs.git" , features = ["rp235x"], default-features = false  }